added example content

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     }
 </style>
 
+
+<!-- NOTE from camille: these functions (specifically the second one) do not allow for nested tabs, so 
+    if your finished design has nested tabs you will have to adjust for that. -->
 <script>
     function openCity(evt, cityName) {
         // Declare all variables
