--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tool Check</title>
     <script type="module" defer src="./src/main.js"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/enes100-safetylog/style.css">
 </head>
 
 <body>
@@ -44,94 +44,6 @@
         <p>TF witnessed incident involving damage to student and/or lab</p>
     </div>
 </body>
-
-<style>
-    .tabcontent {
-        display: none;
-        padding: 6px 12px;
-        border: 1px solid #ccc;
-        border-top: none;
-    }
-
-    @font-face {
-        font-family: 'Interstate';
-        font-weight: normal;
-        font-style: normal;
-        /*noinspection CssUnknownTarget*/
-        src: local('Interstate'), url("/Interstate-Regular.otf") format('opentype');
-    }
-
-    @font-face {
-        font-family: 'Interstate';
-        font-style: normal;
-        font-weight: bold;
-        /*noinspection CssUnknownTarget*/
-        src: local('Interstate'), url("/Interstate-Bold.otf") format('opentype');
-    }
-
-    body {
-        padding: 0;
-        margin: 0;
-        background-image: url("/img/shell overlay repeating.svg");
-        background-repeat: repeat;
-        /* min-height: 96vh; */
-        height: 96vh;
-        background-size: 50%;
-        background-color: #121B21;
-        color: white;
-        font-family: 'Interstate', monospace;
-        overflow-x: hidden;
-        scroll-behavior: smooth;
-        border-top: 2vh solid rgba(255, 210, 0, 1.00);
-        border-bottom: 2vh solid rgba(255, 210, 0, 1.00);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        max-width: max-content;
-    }
-
-    .page {
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
-        margin: auto;
-    }
-
-    .text {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        margin: 0 2vw;
-        width: 100%;
-        overflow: hidden;
-        align-items: center;
-    }
-
-    h1 {
-        text-align: center;
-        font-size: 80px;
-        margin: 0px;
-        margin-bottom: 1%;
-    }
-
-    .tab button {
-        cursor: pointer;
-        padding: 0.5rem 1rem;
-        border: 1px solid transparent;
-        margin-bottom: -1px;
-        background-color: #fff;
-        border-bottom-color: #abc;
-        font: inherit;
-        font-size: smaller;
-        color: black;
-    }
-    .tab button.active {
-        border-top-right-radius: 8px;
-        border-top-left-radius: 8px;
-        border-top-width: 8px;
-        border-color: #e21833 #abc #fff;
-    }
-</style>
 
 <script>
     function openCat(evt, catName) {
